tests/rosetta/out/Smalltalk/bitmap-read-an-image-through-a-pipe.out
/tmp/bitmap-read-an-image-through-a-pipe.st:12: parse error, expected ']'
