tests/rosetta/out/Smalltalk/bitmap-read-an-image-through-a-pipe.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| parseIntStr i neg n digits splitWs parts cur ch parsePpm toks magic w h maxv px ppmData img |
parseIntStr := [:str | i := 0.
neg := false.
((((((str size)) > 0)) and: [(((str copyFrom: (0 + 1) to: 1) = '-'))])) ifTrue: [
neg := true.
i := 1.
] .
n := 0.
digits := Dictionary from:{'0'->0. '1'->1. '2'->2. '3'->3. '4'->4. '5'->5. '6'->6. '7'->7. '8'->8. '9'->9}.
[(i < ((str size)))] whileTrue: [.
n := (((n * 10)) + (digits at: str copyFrom: (i + 1) to: (i + 1))).
i := (i + 1).
].
.
(neg) ifTrue: [
n := -n.
] .
n. ].
splitWs := [:s | parts := {}.
cur := ''.
i := 0.
[(i < ((s size)))] whileTrue: [.
ch := (s copyFrom: i to: (i + 1)).
((((((((ch = (' '))) or: [((ch = '
'))])) or: [((ch = '	'))])) or: [((ch = ''))])) ifTrue: [
((0 > 0)) ifTrue: [
parts := parts copyWith: cur.
cur := ''.
] .
] ifFalse: [
cur := (cur + ch).
].
i := (i + 1).
].
.
((((cur size)) > 0)) ifTrue: [
parts := parts copyWith: cur.
] .
parts. ].
parsePpm := [:data | toks := splitWs value: data.
((((toks size)) < 4)) ifTrue: [
Dictionary from:{'err'->true}.
] .
magic := toks at: 0.
w := parseIntStr value: toks at: 1.
h := parseIntStr value: toks at: 2.
maxv := parseIntStr value: toks at: 3.
px := {}.
i := 4.
[(i < ((toks size)))] whileTrue: [.
px := px copyWith: parseIntStr value: toks at: i.
i := (i + 1).
].
.
Dictionary from:{'magic'->magic. 'w'->w. 'h'->h. 'max'->maxv. 'px'->px}. ].
ppmData := 'P3
2 2
1
0 1 1 0 1 0 0 1 1 1 0 0
'.
img := parsePpm value: ppmData.
Transcript show: (((((('width=' + ((img at: 'w' asString)))) + (' height='))) + ((img at: 'h' asString)))) printString; cr.
